overflow-width fixed

--- a/css/style.css
+++ b/css/style.css
@@ -564,7 +564,7 @@
 
   .examples-list-item .link:hover .overlay-hidden-box,
   .examples-list-item .link:focus .overlay-hidden-box {
-    transform: translateY(-295px);
+    transform: translateY(-101%);
   }
   
   .examples-section .button {
@@ -684,7 +684,7 @@
 }
 
 .overlay-hidden-box {
-  bottom: -295px;
+  top: 101%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -692,6 +692,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: auto;
 
   background: var(--overlay-box-color);
 
@@ -699,7 +700,8 @@
 }
 
 .overlay-hidden-text {
-  width: 322px;
+  width: calc(100% - 24px * 2);
+
   font-size: 18px;
   font-weight: 400;
   line-height: 1.555em;
